--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Player1228私人服务器公告
 subtitle: ""
 description: ""
 keywords:
 author:
-language: en
+language: zh-CN
 timezone: ""
 
 # URL
